# sentinel-claw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  EXAMPLE_KEYS.md  LICENSE  README.md  docker-compose.yml  sentinel.toml.example  setup.sh  uninstall.sh
shim/: sentinel_scrub.c
src/: bridge.rs  config.rs  dashboard.rs  harness.rs  launcher.rs  lib.rs  logger.rs  main.rs  proxy.rs  shield.rs  vault.rs  watchdog.rs
tests/: shield_tests.rs
