[package]
name = "sentinel"
version = "0.0.1"
edition = "2021"
authors = ["Morravex <morravex.research@gmail.com>"]
description = "Autonomous Security Oracle & Agentic Firewall (v0.0.1)"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
futures = "0.3"
url = "2"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
config = "0.13"
dotenv = "0.15"
regex = "1.10"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dashmap = "6.1.0"
teloxide = { version = "0.12", features = ["macros", "rustls"], default-features = false }
shell-words = "1.1"
tokio-rustls = "0.24"
rusqlite = { version = "0.33", features = ["bundled"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
async-stream = "0.3"
tokio-stream = "0.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
nix = { version = "0.27", features = ["ptrace", "process", "signal", "uio", "user"] }
rcgen = "0.11"
rustls = "0.21"
libc = "0.2"
dirs = "5.0"
which = "6.0"
hyper = "1.9.0"
once_cell = "1.19"
urlencoding = "2.1"
